objects/MembershipCancellationTypes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Replicates the dependencies of the dependent picklist fields Cancellation_Type__c and Cancellation_Reason__c of the Membership__c object.</description>
    <fields>
        <fullName>Cancellation_Reasons__c</fullName>
        <inlineHelpText>The semi-colon delimited list of possible Cancellation Reasons for the Cancellation Type of this record. This should be identical to the dependent picklist configuration for the two picklist fields.</inlineHelpText>
        <label>Cancellation Reasons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_non_Admin__c</fullName>
        <inlineHelpText>Allowable Cancellation_Reason__c picklist values for non-Admin users.</inlineHelpText>
        <label>Reasons non-Admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Cancellation Type (as represented in the Name field) is allowed for non-admin users.</inlineHelpText>
        <label>nonAdmin</label>
        <type>Checkbox</type>
    </fields>
    <label>MembershipCancellationTypes</label>
</CustomObject>